// DistriSearch Cluster Protocol Buffers
// Defines messages for cluster management, node communication, and coordination

syntax = "proto3";

package distrisearch.cluster;

option python_generic_services = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// =======================
// Node Messages
// =======================

// Node information
message NodeInfo {
    string node_id = 1;
    string address = 2;
    int32 port = 3;
    NodeRole role = 4;
    NodeStatus status = 5;
    int64 document_count = 6;
    int32 partition_count = 7;
    float cpu_usage = 8;
    float memory_usage = 9;
    float disk_usage = 10;
    google.protobuf.Timestamp last_heartbeat = 11;
    google.protobuf.Timestamp joined_at = 12;
    map<string, string> metadata = 13;
}

enum NodeRole {
    NODE_ROLE_UNKNOWN = 0;
    NODE_ROLE_MASTER = 1;
    NODE_ROLE_SLAVE = 2;
    NODE_ROLE_CANDIDATE = 3;
}

enum NodeStatus {
    NODE_STATUS_UNKNOWN = 0;
    NODE_STATUS_HEALTHY = 1;
    NODE_STATUS_DEGRADED = 2;
    NODE_STATUS_UNHEALTHY = 3;
    NODE_STATUS_OFFLINE = 4;
}

// Node registration request
message RegisterNodeRequest {
    string node_id = 1;
    string address = 2;
    int32 port = 3;
    map<string, string> capabilities = 4;
}

message RegisterNodeResponse {
    bool success = 1;
    string message = 2;
    string cluster_id = 3;
    string master_node_id = 4;
    repeated string assigned_partitions = 5;
    ClusterConfig config = 6;
}

// Deregister node
message DeregisterNodeRequest {
    string node_id = 1;
    bool graceful = 2;
}

message DeregisterNodeResponse {
    bool success = 1;
    string message = 2;
}

// =======================
// Heartbeat Messages
// =======================

message HeartbeatRequest {
    string node_id = 1;
    NodeStatus status = 2;
    float cpu_usage = 3;
    float memory_usage = 4;
    float disk_usage = 5;
    int64 document_count = 6;
    repeated string partition_ids = 7;
    google.protobuf.Timestamp timestamp = 8;
}

message HeartbeatResponse {
    bool acknowledged = 1;
    string master_node_id = 2;
    int64 cluster_term = 3;
    repeated ClusterCommand commands = 4;
}

// Commands from master to slave
message ClusterCommand {
    CommandType type = 1;
    string command_id = 2;
    bytes payload = 3;
    google.protobuf.Timestamp timestamp = 4;
}

enum CommandType {
    COMMAND_TYPE_UNKNOWN = 0;
    COMMAND_TYPE_MIGRATE_PARTITION = 1;
    COMMAND_TYPE_CREATE_REPLICA = 2;
    COMMAND_TYPE_DELETE_REPLICA = 3;
    COMMAND_TYPE_SYNC_DOCUMENT = 4;
    COMMAND_TYPE_REBALANCE = 5;
    COMMAND_TYPE_SHUTDOWN = 6;
}

// =======================
// Cluster Status Messages
// =======================

message GetClusterStatusRequest {
    bool include_nodes = 1;
    bool include_partitions = 2;
}

message ClusterStatusResponse {
    string cluster_id = 1;
    string master_node_id = 2;
    string master_address = 3;
    int32 total_nodes = 4;
    int32 healthy_nodes = 5;
    int32 unhealthy_nodes = 6;
    int64 total_documents = 7;
    int32 total_partitions = 8;
    int32 replication_factor = 9;
    NodeStatus status = 10;
    repeated NodeInfo nodes = 11;
    repeated PartitionInfo partitions = 12;
    google.protobuf.Timestamp last_rebalance = 13;
    google.protobuf.Timestamp created_at = 14;
}

// Cluster configuration
message ClusterConfig {
    string cluster_id = 1;
    int32 replication_factor = 2;
    int32 heartbeat_interval_ms = 3;
    int32 heartbeat_timeout_ms = 4;
    int32 election_timeout_min_ms = 5;
    int32 election_timeout_max_ms = 6;
    float rebalance_threshold = 7;
    int32 max_partitions_per_node = 8;
}

// =======================
// Partition Messages
// =======================

message PartitionInfo {
    string partition_id = 1;
    string primary_node_id = 2;
    repeated string replica_node_ids = 3;
    int64 document_count = 4;
    int64 size_bytes = 5;
    PartitionStatus status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp last_modified = 8;
}

enum PartitionStatus {
    PARTITION_STATUS_UNKNOWN = 0;
    PARTITION_STATUS_ACTIVE = 1;
    PARTITION_STATUS_MIGRATING = 2;
    PARTITION_STATUS_SYNCING = 3;
    PARTITION_STATUS_OFFLINE = 4;
}

message GetPartitionsRequest {
    string node_id = 1;  // Optional: filter by node
}

message GetPartitionsResponse {
    repeated PartitionInfo partitions = 1;
    int32 replication_factor = 2;
}

// Partition migration
message MigratePartitionRequest {
    string partition_id = 1;
    string source_node_id = 2;
    string target_node_id = 3;
    bool include_replicas = 4;
}

message MigratePartitionResponse {
    bool success = 1;
    string message = 2;
    string migration_id = 3;
    int64 documents_migrated = 4;
    float progress = 5;
}

// =======================
// Rebalance Messages
// =======================

message RebalanceRequest {
    bool force = 1;
    string target_node_id = 2;  // Optional: target specific node
}

message RebalanceResponse {
    bool success = 1;
    string message = 2;
    string rebalance_id = 3;
    int32 migrations_planned = 4;
    float estimated_time_seconds = 5;
}

message RebalanceStatus {
    string rebalance_id = 1;
    RebalanceState state = 2;
    int32 total_migrations = 3;
    int32 completed_migrations = 4;
    int32 failed_migrations = 5;
    float progress = 6;
    google.protobuf.Timestamp started_at = 7;
    google.protobuf.Timestamp completed_at = 8;
}

enum RebalanceState {
    REBALANCE_STATE_UNKNOWN = 0;
    REBALANCE_STATE_PENDING = 1;
    REBALANCE_STATE_IN_PROGRESS = 2;
    REBALANCE_STATE_COMPLETED = 3;
    REBALANCE_STATE_FAILED = 4;
    REBALANCE_STATE_CANCELLED = 5;
}

// =======================
// Leader Election (Raft) Messages
// =======================

message RequestVoteRequest {
    int64 term = 1;
    string candidate_id = 2;
    int64 last_log_index = 3;
    int64 last_log_term = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool vote_granted = 2;
    string voter_id = 3;
}

message AppendEntriesRequest {
    int64 term = 1;
    string leader_id = 2;
    int64 prev_log_index = 3;
    int64 prev_log_term = 4;
    repeated LogEntry entries = 5;
    int64 leader_commit = 6;
}

message AppendEntriesResponse {
    int64 term = 1;
    bool success = 2;
    int64 match_index = 3;
    string follower_id = 4;
}

message LogEntry {
    int64 index = 1;
    int64 term = 2;
    LogEntryType type = 3;
    bytes data = 4;
    google.protobuf.Timestamp timestamp = 5;
}

enum LogEntryType {
    LOG_ENTRY_TYPE_UNKNOWN = 0;
    LOG_ENTRY_TYPE_NOOP = 1;
    LOG_ENTRY_TYPE_ADD_NODE = 2;
    LOG_ENTRY_TYPE_REMOVE_NODE = 3;
    LOG_ENTRY_TYPE_ADD_DOCUMENT = 4;
    LOG_ENTRY_TYPE_UPDATE_DOCUMENT = 5;
    LOG_ENTRY_TYPE_DELETE_DOCUMENT = 6;
    LOG_ENTRY_TYPE_CREATE_PARTITION = 7;
    LOG_ENTRY_TYPE_MIGRATE_PARTITION = 8;
    LOG_ENTRY_TYPE_CONFIG_CHANGE = 9;
}

// =======================
// Services
// =======================

// Cluster management service
service ClusterService {
    // Node management
    rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse);
    rpc DeregisterNode(DeregisterNodeRequest) returns (DeregisterNodeResponse);
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
    
    // Cluster status
    rpc GetClusterStatus(GetClusterStatusRequest) returns (ClusterStatusResponse);
    rpc GetNodeInfo(NodeInfoRequest) returns (NodeInfo);
    rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
    
    // Partition management
    rpc GetPartitions(GetPartitionsRequest) returns (GetPartitionsResponse);
    rpc MigratePartition(MigratePartitionRequest) returns (MigratePartitionResponse);
    
    // Rebalancing
    rpc TriggerRebalance(RebalanceRequest) returns (RebalanceResponse);
    rpc GetRebalanceStatus(GetRebalanceStatusRequest) returns (RebalanceStatus);
    rpc CancelRebalance(CancelRebalanceRequest) returns (CancelRebalanceResponse);
}

// Raft consensus service
service RaftService {
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

// Additional request/response messages

message NodeInfoRequest {
    string node_id = 1;
}

message ListNodesRequest {
    NodeStatus status_filter = 1;
    NodeRole role_filter = 2;
}

message ListNodesResponse {
    repeated NodeInfo nodes = 1;
}

message GetRebalanceStatusRequest {
    string rebalance_id = 1;
}

message CancelRebalanceRequest {
    string rebalance_id = 1;
}

message CancelRebalanceResponse {
    bool success = 1;
    string message = 2;
}

message InstallSnapshotRequest {
    int64 term = 1;
    string leader_id = 2;
    int64 last_included_index = 3;
    int64 last_included_term = 4;
    int32 offset = 5;
    bytes data = 6;
    bool done = 7;
}

message InstallSnapshotResponse {
    int64 term = 1;
    bool success = 2;
}
